# sheNANDigans

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
archive/01/: main.c
src/: circuit.py  circuit_converter.py  circuit_optimizer.py  decoding.py  encoding.py  graph.py  graph_flattened.py  graph_nand_compact.py  graph_nand_compact_aligned.py  graph_nested.py  graph_nested_refact.py  graph_node_builder.py  graph_nonrec_KO.py  graph_raw.py  graph_v1_own.py  graph_v2.py  graph_v2_better_nand.py  main.py  nonrec_graph.py  schematics.py  simulator.py  simulator_builder.py  simulator_debug.py  simulator_fast.py  wire.py  wire_converter.py  wire_debug.py  wire_fast.py
src/nand/: bit_packed_decoder.py  bit_packed_encoder.py  bits_utils.py  circuit.py  circuit_builder.py  circuit_decoder.py  circuit_encoder.py  circuit_library.py  circuit_optimizer.py  circuits_library.py  decoded_circuit.py  decoding.py  default_decoder.py  default_encoder.py  encoding.py  encoding_stats.py  graph_flattened.py  graph_nested.py  graph_node_builder.py  nand2tetris_hack_alu.py  optimization_level.py  playground_circuit_builder.py  schematics.py  scratchpad.py  scratchpad_compression.py  simulator.py  simulator_builder.py  simulator_debug.py  simulator_fast.py  wire.py  wire_converter.py  wire_debug.py  (+2 more)
tests/: circuits_factory.py  common_test_assertions.py  conftest.py  numeric_operations.py  parameters_enums.py  schematics_builder.py  simulators_factory.py  test_encoding.py  test_main.py  test_nand2tetris_library.py  test_playground_schematics.py  test_schematics.py
(+22 files in other folders)
